--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,76 @@ header{
     
 }
 
-.nav_links li a{
-    transition: all 0.3s ease 0s;
+ 											/*CSS du formulaire*/
+
+body {
+	font-family: Arial, sans-serif;
+}
+
+form {
+	border: 2px solid #ccc;
+	padding: 30px;
+	margin-bottom: 20px;
+	border-radius: 10px;
+	max-width: 400px;
+	margin: 0 auto;
+	-webkit-box-shadow: 0px 10px 13px -7px #000000, -10px 8px 15px -5px rgba(0,0,0,0.29); 
+box-shadow: 0px 10px 13px -7px #000000, -10px 8px 15px -5px rgba(0,0,0,0.29);
+
+}
+
+h2 {
+	text-align: center;
+	padding-top: 15px;
+
+}
+
+label {
+	display: block;
+	margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="password"] {
+	padding: 5px;
+	margin-bottom: 10px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	width: 100%;
+	box-sizing: border-box;
+
+}
+
+input[type="submit"] {
+	background-color: #3d86e6;
+	color: white;
+	padding: 10px 15px;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	-webkit-box-shadow: 0px 10px 13px -7px #000000, -10px 8px 15px -5px rgba(0,0,0,0.29); 
+box-shadow: 0px 10px 13px -7px #000000, -10px 8px 15px -5px rgba(0,0,0,0.29);
+}
+
+input[type="submit"]:hover {
+	background-color: #3e8e41;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+	border: 2px solid #4CAF50;
+}
+
+.error {
+	color: red;
+	font-style: italic;
+}
+
+.compte{
+	padding-top: 50px;
+	padding-bottom: 15px;
+}
+
+.esc{
+	padding-top: 55px;
 }
